fixed alignment

--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -846,6 +846,11 @@ body{
 }
 .coupon_input{
   width:auto;
+  margin-top: 0px;
+  height: 42px;
+  border-radius: 30px;
+  -moz-border-radius: 30px;
+  -webkit-border-radius: 30px;
 }
 .btn_checkout{
 }
